Add initial radio buttons, h1, h2, and description in <p>.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,38 @@
   <title>Programming Language Suggester</title>
 </head>
 <body>
-  <h1></h1>
+  <h1>Picking a Programming Language: 101</h1>
+  <p>Interested in coding but can't decide which language(s) to choose? Fill out the application below to let our bots generate the best fit based on a few key personality traits!</p>
+
+  <h2>Choose one option for each of the following questions:</h2>
+  <form id="survey">
+    <!-- <label for="input1"></label>
+    <input id="input1" type="text">
+    <label for="input2">2nd number:</label>
+    <input id="input2" type="text"> -->
+
+    <label>
+      <input type="radio" name="bev" value="coffee">
+      Coffee
+    </label><br>
+    <label>
+      <input type="radio" name="bev" value="tea">
+      Tea
+    </label><br>
+    <label>
+      <input type="radio" name="bev" value="water">
+      Water
+    </label><br>
+    <!-- <label>
+      <input type="radio" name="bev" value="divide">
+      divide
+    </label> -->
+
+    <button type="submit" class="btn">Go!</button>
+  </form>
+
+  <h2>Results</h2>
+  <p id="output"></p>
   
 </body>
 </html>
