Add div sections and id types for hidden tags.

--- a/index.html
+++ b/index.html
@@ -89,6 +89,31 @@
 
   <h2>Congrats! Your language is...</h2>
   <p id="output"></p>
+
+  <div id="ruby" class="hidden">
+    <h2>Ruby!</h2>
+    <p>Nice work <span id="firstName">__________</span>! Looks like Ruby is the programming language for you. Based on your love of all things calm, like the ocean and a nice cup of hot jasmine tea, we believe Ruby would be the best fit for you.</p>
+  </div>
+
+  <div id="javascript" class="hidden">
+    <h2>JavaScript!</h2>
+    <p>Well done <span id="firstName">__________</span>! Based on your love of drinking coffee on the top of a mountain, our state-of-the-art programming language generator believes JavaScript would suit your personality best.</p>
+  </div>
+
+  <div id="csharp" class="hidden">
+    <h2>C#!</h2>
+    <p>Bravo <span id="firstName">__________</span>! If there is one thing we know to be true, it's that nothing goes together better than turtles, strawberry icecream, and the ability to be a C# wizard.</p>
+  </div>
+
+  <div id="python" class="hidden">
+    <h2>Python!</h2>
+    <p>Cheers to you, <span id="firstName">_________</span>! Since you love taking your dog on a nice stroll in the desert, we believe Python would jive best with your personality.</p>
+  </div>
+
+  <div id="rust" class="hidden">
+    <h2>Rust!</h2>
+    <p>Well, <span id="firstName">_________</span>, you're a bit of a harder coder to crack. Your combination of personality traits is as wild and unpredictable as it gets. Luckily, Rust is for the wild and unpredictable sort.</p>
+  </div>
   
 </body>
 </html>
