--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
   <h2>Please enter your name and choose <u>one</u> option for each of the following questions:</h2>
   <form id="survey">
-    <label for="name">First Name:</label>
-    <input id="name" type="text">
+    <label for="firstName">First Name:</label>
+    <input id="firstName" type="text">
 
     <h3>Beverage</h3>
     <label>
-      <input type="radio" name="bev" value="coffee">
+      <input type="radio" name="bev" value="coffee" checked>
       Coffee
     </label><br>
     <label>
@@ -30,7 +30,7 @@
 
     <h3>Vacation</h3>
     <label>
-      <input type="radio" name="vacation" value="beach">
+      <input type="radio" name="vacation" value="beach" checked>
       Beach
     </label><br>
     <label>
@@ -44,7 +44,7 @@
 
     <h3>Flavor</h3>
     <label>
-      <input type="radio" name="flavor" value="chocolate">
+      <input type="radio" name="flavor" value="chocolate" checked>
       Chocolate
     </label><br>
     <label>
@@ -58,7 +58,7 @@
 
     <h3>Pet</h3>
     <label>
-      <input type="radio" name="pet" value="dog">
+      <input type="radio" name="pet" value="dog" checked>
       Dog
     </label><br>
     <label>
@@ -72,7 +72,7 @@
 
     <h3>Color</h3>
     <label>
-      <input type="radio" name="color" value="green">
+      <input type="radio" name="color" value="green" checked>
       Green
     </label><br>
     <label>
