Edit text in each of the 5 div sections.

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
 
   <div id="csharp" class="hidden">
     <h2>C#!</h2>
-    <p>Bravo! If there is one thing we know to be true, it's that nothing goes together better than turtles, strawberry icecream, and the ability to be a C# wizard.</p>
+    <p>Bravo! If there is one thing we know to be true, it's that nothing goes together better than water, the desert, and the ability to be a C# wizard.</p>
   </div>
 
   <div id="python" class="hidden">
     <h2>Python!</h2>
-    <p>Cheers to you! Since you love taking your dog on a nice stroll in the desert, we believe Python would jive best with your personality.</p>
+    <p>Cheers to you! Since you love drinking your coffee while watching the desert sunrise, we believe Python would jive best with your personality.</p>
   </div>
 
   <div id="rust" class="hidden">
