Add reset button, debug process to get it to work.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
       Purple
     </label><br>
 
-    <button type="submit" class="btn">Generate!</button>
+    <button type="submit" class="btn">Generate!</button><br>
+    <button type="button" class="btn" id="reset">Reset</button> 
   </form>
 
   <h2>Congrats <span id="firstName"></span>! Your language is...</h2>
