--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h3>Beverage</h3>
     <label>
-      <input type="radio" name="bev" value="coffee" checked>
+      <input type="radio" name="bev" value="coffee">
       Coffee
     </label><br>
     <label>
@@ -30,7 +30,7 @@
 
     <h3>Vacation</h3>
     <label>
-      <input type="radio" name="vacation" value="beach" checked>
+      <input type="radio" name="vacation" value="beach">
       Beach
     </label><br>
     <label>
@@ -44,7 +44,7 @@
 
     <h3>Flavor</h3>
     <label>
-      <input type="radio" name="flavor" value="chocolate" checked>
+      <input type="radio" name="flavor" value="chocolate">
       Chocolate
     </label><br>
     <label>
@@ -58,7 +58,7 @@
 
     <h3>Pet</h3>
     <label>
-      <input type="radio" name="pet" value="dog" checked>
+      <input type="radio" name="pet" value="dog">
       Dog
     </label><br>
     <label>
@@ -72,7 +72,7 @@
 
     <h3>Color</h3>
     <label>
-      <input type="radio" name="color" value="green" checked>
+      <input type="radio" name="color" value="green">
       Green
     </label><br>
     <label>
