Fix bug: Error involving null value for 'checked' attribute.

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
     <h2>Rust!</h2>
     <p>Well, you're a bit of a harder coder to crack. Your combination of personality traits is as wild and unpredictable as it gets. Luckily, Rust is for the wild and unpredictable sort.</p>
   </div>
+
+  <div id="error" class="hidden">
+    <h2>Please selection an option from each of the boxes before submitting!</h2>
+  </div>
   
 </body>
 </html>
