Fix bug: output is currently rust for all options, incorrect.

--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
 </head>
 <body>
 
-  <div id="intro">
-    <img src="langimg.png" alt="A picture of programming language">
-    <h1>Picking a Programming Language: 101</h1>
-    <p>Interested in coding but can't decide which language(s) to choose? Fill out the application below to let our bots generate the best fit based on a few key personality traits!</p>
-  </div>
-
+    <!-- <img src="langimg.png" alt="A picture of programming language"> -->
+  <h1>Picking a Programming Language: 101</h1>
+  <p>Interested in coding but can't decide <em>which</em> language(s) to choose? Fill out the application below to let our bots generate the best fit!</p>
 
   <h2>Please enter your name and choose <u>one</u> option for each of the following questions:</h2>
   <form id="survey">
@@ -98,27 +95,27 @@
 
   <div id="ruby" class="hidden">
     <h2>Ruby!</h2>
-    <p>Nice work! Looks like Ruby is the programming language for you. Based on your love of all things calm, like the ocean and a nice cup of hot jasmine tea, we believe Ruby would be the best fit for you.</p>
+    <h3>Nice work! Looks like Ruby is the programming language for you. Based on your love of all things calm, like the ocean and a nice cup of hot jasmine tea, we believe Ruby would be the best fit for you.</h3>
   </div>
 
   <div id="javascript" class="hidden">
     <h2>JavaScript!</h2>
-    <p>Well done! Based on your love of drinking coffee on the top of a mountain, our state-of-the-art programming language generator believes JavaScript would suit your personality best.</p>
+    <h3>Well done! Based on your love of drinking coffee on the top of a mountain, our state-of-the-art programming language generator believes JavaScript would suit your personality best.</h3>
   </div>
 
   <div id="csharp" class="hidden">
     <h2>C#!</h2>
-    <p>Bravo! If there is one thing we know to be true, it's that nothing goes together better than water, the desert, and the ability to be a C# wizard.</p>
+    <h3>Bravo! If there is one thing we know to be true, it's that nothing goes together better than water, the desert, and the ability to be a C# wizard.</h3>
   </div>
 
   <div id="python" class="hidden">
     <h2>Python!</h2>
-    <p>Cheers to you! Since you love drinking your coffee while watching the desert sunrise, we believe Python would jive best with your personality.</p>
+    <h3>Cheers to you! Since you love drinking your coffee while watching the desert sunrise, we believe Python would jive best with your personality.</h3>
   </div>
 
   <div id="rust" class="hidden">
     <h2>Rust!</h2>
-    <p>Well, you're a bit of a harder coder to crack. Your combination of personality traits is as wild and unpredictable as it gets. Luckily, Rust is for the wild and unpredictable sort.</p>
+    <h3>Well, you're a bit of a harder coder to crack. Your combination of personality traits is as wild and unpredictable as it gets. Luckily, Rust is for the wild and unpredictable sort.</h3>
   </div>
 
   <div id="error" class="hidden">
