WIP: taking 10 minute break.

--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
       <input type="radio" name="color" value="purple">
       Purple
     </label><br>
-    <button type="submit" class="btn" id="generate">Generate!</button>
+    <button type="submit" class="btn">Generate!</button>
   </form>
 
   <button type="button" class="btn" id="reset">Reset</button> 
   <h2>Congrats <span id="firstName"></span>! Your language is...</h2>
-  <p id="output"></p>
+  <!-- <p id="output"></p> -->
 
   <div id="ruby" class="hidden">
     <h2>Ruby!</h2>
