Fix bug: buttons now clearing.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <title>Programming Language Suggester</title>
 </head>
 <body>
-
-    <!-- <img src="langimg.png" alt="A picture of programming language"> -->
   <h1>Picking a Programming Language: 101</h1>
   <p>Interested in coding but can't decide <em>which</em> language(s) to choose? Fill out the application below to let our bots generate the best fit!</p>
 
@@ -88,10 +86,10 @@
     </label><br>
     <button type="submit" class="btn">Generate!</button>
   </form>
-
+  <br>
   <button type="button" class="btn" id="reset">Reset</button> 
   <h2>Congrats <span id="firstName"></span>! Your language is...</h2>
-  <!-- <p id="output"></p> -->
+  <p id="output"></p>
 
   <div id="ruby" class="hidden">
     <h2>Ruby!</h2>
