--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- <link href="css/bootstrap.css" rel="stylesheet" type="text/css"> -->
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/scripts.js"></script>
   <title>Programming Language Suggester</title>
 </head>
 <body>
-  <h1>Picking a Programming Language: 101</h1>
-  <p>Interested in coding but can't decide <em>which</em> language(s) to choose? Fill out the application below to let our bots generate the best fit!</p>
+  
+  <div id="intro">
+    <img src="langimg.png" alt="A picture of various programming languages">
+    <h1>Picking a Programming Language: 101</h1>
+    <p>Interested in coding but can't decide <em>which</em> language(s) to choose? Fill out the application below to let our bots generate the best fit!</p>
+    <h2>Please enter your name and choose <u>one</u> option for each of the following questions:</h2>
+  </div>
 
-  <h2>Please enter your name and choose <u>one</u> option for each of the following questions:</h2>
   <form id="survey">
     <label for="firstName">First Name:</label>
     <input id="firstName" type="text">
@@ -84,9 +88,9 @@
       <input type="radio" name="color" value="purple">
       Purple
     </label><br>
-    <button type="submit" class="btn">Generate!</button>
+    <button type="submit" class="btn" id="generate">Generate!</button>
   </form>
-  <br>
+
   <button type="button" class="btn" id="reset">Reset</button> 
   <h2>Congrats <span id="firstName"></span>! Your language is...</h2>
   <p id="output"></p>
