Fix bug: remove variables that were declared but never used.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <h3>Beverage</h3>
     <label>
-      <input type="radio" name="bev" value="coffee">
+      <input type="radio" name="bev" value="coffee" required>
       Coffee
     </label><br>
     <label>
@@ -34,7 +34,7 @@
 
     <h3>Vacation</h3>
     <label>
-      <input type="radio" name="vacation" value="beach">
+      <input type="radio" name="vacation" value="beach" required>
       Beach
     </label><br>
     <label>
@@ -48,7 +48,7 @@
 
     <h3>Flavor</h3>
     <label>
-      <input type="radio" name="flavor" value="chocolate">
+      <input type="radio" name="flavor" value="chocolate" required>
       Chocolate
     </label><br>
     <label>
@@ -62,7 +62,7 @@
 
     <h3>Pet</h3>
     <label>
-      <input type="radio" name="pet" value="dog">
+      <input type="radio" name="pet" value="dog" required>
       Dog
     </label><br>
     <label>
@@ -76,7 +76,7 @@
 
     <h3>Color</h3>
     <label>
-      <input type="radio" name="color" value="green">
+      <input type="radio" name="color" value="green" required>
       Green
     </label><br>
     <label>
@@ -91,7 +91,7 @@
   </form>
 
   <button type="button" class="btn" id="reset">Reset</button> 
-  <h2>Congrats <span id="firstName"></span>! Your language is...</h2>
+  <h2>Congrats <span id="nameDisplay"></span>! Your language is...</h2>
   <p id="output"></p>
 
   <div id="ruby" class="hidden">
