--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
     <button type="submit" class="btn" id="generate">Generate!</button>
   </form>
 
-  <button type="button" class="btn" id="reset">Reset</button> 
+  <!-- <button type="button" class="btn" id="reset">Reset</button>  -->
+
+  <form>
+    <button class="restart-btn">Restart</button>
+  </form>
+  
   <h2>Congrats <span id="nameDisplay"></span>! Your language is...</h2>
   <p id="output"></p>
 
@@ -119,9 +124,9 @@
     <h3>Well, you're a bit of a harder coder to crack. Your combination of personality traits is as wild and unpredictable as it gets. Luckily, Rust is for the wild and unpredictable sort.</h3>
   </div>
 
-  <div id="error" class="hidden">
+  <!-- <div id="error" class="hidden">
     <h2>Please selection an option from each of the boxes before submitting!</h2>
-  </div>
+  </div> -->
   
 </body>
 </html>
